<resources>
        <string name="app_name">JjBeautiful</string>
    <string name="bottom_name1">Home</string>
    <string name="bottom_name2">Project</string>
    <string name="bottom_name3">Square</string>
    <string name="bottom_name4">OfficialAccount</string>
    <string name="bottom_name5">My</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="done">complete</string>
    <string name="setting_base">basicSettings</string>
    <string name="setting_other">otherSettings</string>
    <string name="setting_top">displayTopArticles</string>
    <string name="setting_top_tip">After opening, the homepage will display the top article</string>
    <string name="choose_theme_color">themeColor</string>
    <string name="choose_theme_color_summary">set the theme color of the app</string>
    <string name="setting_about">about</string>
    <string name="setting_project">openSourceProject</string>
    <string name="setting_version">version</string>
    <string name="setting_exit">exit</string>
    <string name="clear_cache">clearCache</string>
    <string name="copyright">copyrightNotice</string>
    <string name="copyright_tip">The APIs used in this app are provided by WanAndroid.com  for learning and communication purposes only</string>
    <string name="copyright_summary">for personal and non commercial use only</string>
    <string name="author">author</string>
    <string name="author_name">An Android developer who has been practicing for two and a half years→_→</string>
    <string name="project_address">project source code</string>
    <string name="github_url">https://github.com/hegaojian/JetpackMvvm</string>
    <string name="open_project">special thanks</string>
    <string name="open_project_tips">open source libraries used in the project</string>
    <string name="error_occurred">Sorry, the app crashed. \n Please take the copied error log to the author and ask them to V you 50</string>
</resources>
